detect route fixed

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -16,7 +16,7 @@
         <a  routerLink="/home" class="nav-link" >Почетна</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/detect" class="nav-link" >Детектирај</a>
+        <a routerLink="/detect/{{this.index}}" class="nav-link" >Детектирај</a>
       </li>
       <li class="nav-item">
         <a routerLink="/heroes" class="nav-link" >Херој</a>
