--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper" class="animate">
-  <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img src="../../../assets/Icons/logo.png"></a>
+  <nav class="navbar header-top navbar-expand-lg  navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="../../../assets/Icons/logooo.png"></a>
 
     <button class="navbar-toggler" type="button">
       <span class="navbar-toggler-icon"></span>
