--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -9,13 +9,13 @@
           <ul class="new_friend_list list-unstyled row">
             <ng-container *ngFor="let user of users">
               <li class="col-lg-4 col-md-2 col-sm-6 col-4" *ngIf="user.isVisible&&(user.typeUser==1||user.typeUser==3)" >
-                <a href="#">
-                  <img src="{{user.image}}" class="img-thumbnail rounded-circle" alt="User Image">
-                  <div class="info-user">
-                    <h6 class="users_name">{{user.name}}</h6>
-                    <small class="join_date">{{user.lastName}}</small>
-                  </div>
-                </a>
+                  <a href="#">
+                    <img src="{{user.image}}" class="img-thumbnail rounded-circle" alt="User Image">
+                    <div class="info-user">
+                      <h6 class="users_name">{{user.name}}</h6>
+                      <h6 class="join_date">{{user.lastName}}</h6>
+                    </div>
+                  </a>
               </li>
             </ng-container>
           </ul>
@@ -35,9 +35,8 @@
                  <img src="{{user.image}}" class="img-thumbnail rounded-circle" alt="User Image">
                  <div class="info-user">
                    <h6 class="users_name">{{user.name}}</h6>
-                   <small class="join_date">{{user.lastName}}</small>
+                   <h6 class="join_date">{{user.lastName}}</h6>
                  </div>
-
                </a>
              </li>
            </ng-container>
