--- a/src/app/components/problem-info/problem-info.component.html
+++ b/src/app/components/problem-info/problem-info.component.html
@@ -9,7 +9,9 @@
     </div>
     <label>Листа на потребни работи</label>
     <ul>
-      <li *ngFor="let item of problem.itemsNeeded"></li>
+      <li *ngFor="let item of problem.itemsNeeded">
+        {{item}}
+      </li>
     </ul>
 
     <div class="row">
