--- a/src/app/components/problem-info/problem-info.component.html
+++ b/src/app/components/problem-info/problem-info.component.html
@@ -16,7 +16,7 @@
 
     <div class="row">
       <div class="col button-problem">
-        <button class="btn btn-danger text-light p-3 shadow button-problem-size"  >
+        <button class="btn btn-danger text-light p-3 shadow button-problem-size" (click)="this.onClick()"  >
           Помогни
         </button>
       </div>
