--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -1,16 +1,49 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12 col-lg-6">
-        <h2><strong>Успешни приказни</strong></h2>
-        <ngb-accordion *ngFor="let story of stories">
-          <ngb-panel id="toggle">
-              <template>
-                <span>{{story.name}}</span>
-              </template>
-              <template ngbPanelContent>
-                {{story.description}}
-              </template>
-          </ngb-panel>
-        </ngb-accordion>
+    <div class="col-md-12 col-lg-12">
+        <h2><strong>Успешни приказни</strong></h2><hr/>
+        <!--<ngb-accordion *ngFor="let story of stories">-->
+          <!--<ngb-panel id="toggle" title="{{story.name}}">-->
+              <!--<ng-template ngbPanelContent>-->
+                <!--<img src="{{story.pictureUrl}}}">-->
+                <!--{{story.description}}-->
+              <!--</ng-template>-->
+          <!--</ngb-panel>-->
+        <!--</ngb-accordion>-->
+
+              <div class="d-flex story" *ngFor="let story of stories">
+                <div class="col-md-4">
+                  <img src="{{story.pictureUrl}}" class="img rounded" alt="Problem IMG" width="340" height="200">
+                </div>
+                <div class="col-md-8">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h5>{{story.name}}</h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <small><strong>Категорија:</strong> {{story.category}}</small>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <p>{{story.description}}</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <p><strong>Детектор:</strong> {{story.detector}}</p>
+                    </div>
+                    <div class="col-md-6">
+                      <p><strong>Донатор:</strong> {{story.donators}}</p>
+                    </div>
+                  </div>
+                </div>
+                <hr/>
+              </div>
+
+
+
   </div>
 </div>
