--- a/src/app/components/story/story.component.css
+++ b/src/app/components/story/story.component.css
@@ -1,7 +1,6 @@
 h2{
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   color: #757575;
-
 }
 
 #toggle{
@@ -21,5 +20,7 @@ hr{
   border-bottom: 4px solid #17a2b8;
   border-radius: 3px;
   width: 50px;
-  margin: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 40px;
 }
