--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 col-lg-6">
+    <div class="col-md-12 col-lg-6 v2">
       <div class="card">
         <div class="header">
           <h2><strong>Донатори</strong></h2>
