Add new problems and stories in mocks

--- a/src/app/components/modal-basic/modal-singup/modal-singup.component.html
+++ b/src/app/components/modal-basic/modal-singup/modal-singup.component.html
@@ -32,6 +32,12 @@
 </ng-template>
 
 
+<div class="container-login">
+
+  <button class="btn btn-link btn-block buttonLogin" (click)="open(content);modal.dismiss('Cross click')" id="signInButton" >
+    Регистрирајте се
+  </button>
+</div>
 
 
 
