Fixed height of the map

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
   margin: 3.4% 0 0;
   left: 0;
   right: 0;
-
+  height: 100%;
 }
 .navbar-custom{
   position: fixed; /* Set the navbar to fixed position */
