--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -31,7 +31,8 @@ app-problem-detector-form{
   padding-left: 0;
   padding-right: 0;
   display: block;
-  height:94.4%;
+  height:100%;
+  margin-top: 0;
 }
 .size{
   display: block;
