--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -36,11 +36,12 @@
                 <p><strong>Детектор:</strong> {{story.detector}}</p>
               </div>
               <div class="col-md-6">
-                <p><strong>Донатор:</strong> {{story.donators}}</p>
+                <p><strong>Донатор:</strong>{{story.donators}}</p>
               </div>
             </div>
           </div>
           <hr/>
         </div>
   </div>
+</div>
 </div>
