--- a/src/app/components/modal-basic/modal-basic.component.html
+++ b/src/app/components/modal-basic/modal-basic.component.html
@@ -1,7 +1,7 @@
-<ng-template #content let-modal>
+<ng-template #content >
   <div class="container-modal"  >
     <div class="modal-header">
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismissAll('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -21,7 +21,7 @@
           <label class="form-check-label" for="exampleCheck1">Запомни ме</label>
         </div>
         <div class="container-login">
-          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.close('Save click')">Најави ме</button>
+          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.dismissAll('Save click')">Најави ме</button>
           <app-modal-registration></app-modal-registration>
         </div>
         <div class="icons-media">
