--- a/src/app/components/modal-basic/modal-singup/modal-singup.component.html
+++ b/src/app/components/modal-basic/modal-singup/modal-singup.component.html
@@ -1,7 +1,7 @@
-<ng-template #content let-modal>
+<ng-template #content >
   <div class="container-modal">
     <div class="modal-header">
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismissAll('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="container-login">
-          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.close('Save click')">Регистрирај се</button>
+          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.dismissAll('Save click')">Регистрирај се</button>
 
         </div>
 
@@ -34,7 +34,7 @@
 
 <div class="container-login">
 
-  <button class="btn btn-link btn-block buttonLogin" (click)="open(content);modal.dismiss('Cross click')" id="signInButton" >
+  <button class="btn btn-link btn-block buttonLogin" (click)="open(content);modal.dismissAll('Cross click')" id="signInButton" >
     Регистрирајте се
   </button>
 </div>
