--- a/src/app/components/modal-basic/modal-singup/modal-singup.component.html
+++ b/src/app/components/modal-basic/modal-singup/modal-singup.component.html
@@ -34,7 +34,7 @@
 
 <div class="container-login">
 
-  <button class="btn btn-link btn-block buttonLogin" (click)="open(content);modal.dismissAll('Cross click')" id="signInButton" >
+  <button class="btn btn-link btn-block buttonLogin" (click)="open(content)" id="signInButton" >
     Регистрирајте се
   </button>
 </div>
