--- a/src/app/components/modal-basic/modal-registration/modal-registration.component.html
+++ b/src/app/components/modal-basic/modal-registration/modal-registration.component.html
@@ -1,7 +1,7 @@
-<ng-template #content let-modal>
+<ng-template #content>
   <div class="container-modal">
     <div class="modal-header">
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismissAll('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="container-login" id="pole1">
-          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.close('Save click')">Испрати</button>
+          <button type="button" class="btn btn-lg btn-info btn-block buttonLogin" (click)="modal.dismissAll('Save click')">Испрати</button>
 
         </div>
 
@@ -26,7 +26,7 @@
 
 <div class="container-login">
 
-  <button class="btn btn-link btn-block buttonLogin" (click)="open(content);modal.dismiss('Cross click')" id="signInButton" >
+  <button class="btn btn-link btn-block buttonLogin" (click)="open(content)" id="signInButton" >
     Ја заборавивте лозинката?
   </button>
 </div>
